pokedex title adjust

--- a/playground/pokedex/manifest.json
+++ b/playground/pokedex/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Pokédex",
+	"name": "Pokédex Search",
 	"short_name": "Pokédex",
 	"lang": "en",
 	"start_url": "https://welcome.fiug.dev/playground/pokedex/pokedex.html",
