--- a/playground/pokedex/manifest.json
+++ b/playground/pokedex/manifest.json
@@ -1,11 +1,12 @@
 {
-	"name": "Pokédex Search",
-	"short_name": "Pokédex",
+	"name": "Pokedex Search",
+	"short_name": "Pokedex",
 	"lang": "en",
 	"start_url": "https://welcome.fiug.dev/playground/pokedex/pokedex.html",
 	"scope": "https://welcome.fiug.dev/playground/pokedex/",
 	"display": "standalone",
 	"theme_color": "#1a1a20",
+	"background_color": "#1a1a20",
 	"icons": [
 		{
 			"src": "pokedex.png"
