--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "watch": "bunx http-server"
   },
   "devDependencies": {
+    "@babel/standalone": "^7.25.6",
     "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
-  },
-  "dependencies": {}
+  }
 }
